Closed Bug 127277 Opened 23 years ago Closed 23 years ago

Active Accessibility: nsIAccessible's accValue returns wrong values for Html Table Cell Text Node and Caption Text Node

Categories

(SeaMonkey :: General, defect, P2)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: dsirnapalli, Assigned: aaronlev)

References

Details

(Keywords: access, topembed)

Attachments

(1 file)

-- nsIAccessible's accValue returns NS_ERROR_FAILURE instead of
NS_ERROR_NOT_IMPLEMENTED for Html Table Cell Text Node and Html Caption Text 
Node.
Status: NEW → ASSIGNED
Keywords: access, fcc508, topembed
Priority: -- → P2
Whiteboard: seeking r=, sr=
Target Milestone: --- → mozilla1.0
Keywords: nsbeta1
Comment on attachment 71439 [details] [diff] [review]
Fixes return arguments

r=jgaunt
Attachment #71439 - Flags: review+
Comment on attachment 71439 [details] [diff] [review]
Fixes return arguments

sr=hewitt
Attachment #71439 - Flags: superreview+
Blocks: 75785
Comment on attachment 71439 [details] [diff] [review]
Fixes return arguments

a=shaver for 0.9.9.
Attachment #71439 - Flags: approval+
checked in fix
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: seeking r=, sr=
-- verified in todays trunk build. Works fine. Marking it as verified.
Status: RESOLVED → VERIFIED
QA Contact: doronr → dsirnapalli
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: