Bug 127277. accValue incorrect return values. r=jgaunt, sr=hewitt, a=shaver