accessible/src/base/nsBaseWidgetAccessible.cpp
@@ -264,7 +264,7 @@ NS_IMETHODIMP nsLinkableAccessible::GetAccValue(nsAWritableString& _retval)
     if (elt) 
       return elt->GetAttribute(NS_LITERAL_STRING("href"), _retval);
   }
-  return NS_ERROR_FAILURE;
+  return NS_ERROR_NOT_IMPLEMENTED;
 }
 
 
@@ -284,8 +284,9 @@ NS_IMETHODIMP nsLinkableAccessible::GetAccActionName(PRUint8 index, nsAWritableS
       nsAccessible::GetTranslatedString(NS_LITERAL_STRING("jump"), _retval); 
       return NS_OK;
     }
+    return NS_ERROR_NOT_IMPLEMENTED;
   }
-  return NS_ERROR_FAILURE;
+  return NS_ERROR_INVALID_ARG;
 }
 
 /* void accDoAction (in PRUint8 index); */
@@ -322,7 +323,7 @@ NS_IMETHODIMP nsLinkableAccessible::AccDoAction(PRUint8 index)
       }
     }
   }
-  return NS_ERROR_FAILURE;
+  return NS_ERROR_INVALID_ARG;
 }
 
 
